[package]
name = "ecsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
walkdir = "2.3.2"

kuchiki = "0.8.1"
html5ever = "0.25.0"

serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
